# Smart-Care

./: .gitignore  README.md  build_files.sh  pyproject.toml  requirements.txt  vercel.json
accounts/: admin.py  decorators.py  forms.py  managers.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_remove_user_username.py  0003_remove_user_profile_picture.py
appointments/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
appointments/migrations/: 0001_initial.py  0002_appointment_end_time_appointment_start_time_and_more.py  0003_alter_appointment_end_time_and_more.py  0004_prescription_is_active.py  0005_medication_is_active.py  0006_medication_frequency.py  0007_alter_prescription_appointment.py  0008_platformfee.py  0009_payment_stripe_session_id.py  0010_alter_appointment_status.py  0011_symptomcheck.py
doctors/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
doctors/migrations/: 0001_initial.py  0002_alter_review_patient.py  0003_doctor_is_available.py  0004_alter_doctorschedule_day_of_week.py
patients/: admin.py  forms.py  models.py  urls.py  views.py
patients/migrations/: 0001_initial.py  0002_patient_height_patient_weight.py  0003_medicalhistory_is_active.py  0004_alter_medicalhistory_is_active.py  0005_familymedicalhistory.py  0006_alter_familymedicalhistory_relation_allergy.py
smart_care/: .env.example  asgi.py  settings.py  urls.py  views.py  wsgi.py
staticfiles/: staticfiles.json
templates/components/: chat_message.html  doctor_card.html  form.html
templates/errors/: 404.html
(+39 files in other folders)
