[project]
name = "smart-care"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.3",
    "django-browser-reload>=1.21.0",
    "django-cleanup>=9.0.0",
    "django-environ>=0.13.0",
    "gunicorn>=25.1.0",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.12",
    "stripe>=15.1.0",
    "whitenoise>=6.12.0",
]
